--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@mui/material": "^5.13.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "follow-redirects": "^1.15.2",
+    "proxy-from-env": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
